soluciones/weekly/phpmyadmin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
  namespace: laravel
spec:
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
      - name: phpmyadmin
        image: phpmyadmin:5.2.1
        ports:
        - containerPort: 80
        resources: 
          requests:
            memory: "512Mi"
            cpu: "800m"
          limits:
            memory: "512Mi"
            cpu: "800m"
