soluciones/weekly/phpmyadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
  namespace: laravel
spec:
  type: ClusterIP
  selector:
    app: phpmyadmin
  ports:
  - port: 80
    targetPort: 80
