soluciones/weekly/phpmyadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin-ingress
  namespace: laravel
  labels:
    name: phpmyadmin
spec:
  rules:
  - host: phpmyadmin
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: phpmyadmin-service
            port: 
              number: 80
